src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>NAICS__c</fullName>
        <description>North American Industry Classification</description>
        <label>NAICS Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NXP_GID_GE__c</fullName>
        <formula>IF( ParentId != NULL , Parent.NXP_GID__c , NXP_GID__c )</formula>
        <label>NXP GID G.E.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NXP_GID__c</fullName>
        <externalId>true</externalId>
        <label>NXP GID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NXP_Global_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>An NXP Global Customer Master ID to identify customer</inlineHelpText>
        <label>NXP Global ID</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__LastOCPExport__c</fullName>
        <description>URL of last OrgChartPlus image export</description>
        <label>Last OCP Export</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OwnerId_Original__c</fullName>
        <label>Original Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROBABILITY_Assessment__c</fullName>
        <inlineHelpText>Stores the probability of an opportuntiy reaching the Commitment stage for this parent account. Is applies to all opportunties upon creation or change of stage. Calculated yearly based on 2 years history.</inlineHelpText>
        <label>PROBABILITY - Assessment</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PROBABILITY_Decision__c</fullName>
        <inlineHelpText>Stores the probability of an opportuntiy reaching the Commitment stage for this parent account. Is applies to all opportunties upon creation or change of stage. Calculated yearly based on 2 years history.</inlineHelpText>
        <label>PROBABILITY - Decision</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PROBABILITY_Discovery__c</fullName>
        <inlineHelpText>Stores the probability of an opportuntiy reaching the Commitment stage for this parent account. Is applies to all opportunties upon creation or change of stage. Calculated yearly based on 2 years history.</inlineHelpText>
        <label>PROBABILITY - Discovery</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PROBABILITY_Inital__c</fullName>
        <inlineHelpText>Stores the probability of an opportuntiy reaching the Commitment stage for this parent account. Is applies to all opportunties upon creation or change of stage. Calculated yearly based on 2 years history.</inlineHelpText>
        <label>PROBABILITY - Initial</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PROBABILITY_Recommendation__c</fullName>
        <inlineHelpText>Stores the probability of an opportuntiy reaching the Commitment stage for this parent account. Is applies to all opportunties upon creation or change of stage. Calculated yearly based on 2 years history.</inlineHelpText>
        <label>PROBABILITY - Recommendation</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Request_Form__c</fullName>
        <label>Parent Account Request Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Parent_Acct_For_Sharing_Criteria__c</fullName>
        <description>Do not update this field.  Used for Parent Account Sharing</description>
        <label>Parent Acct For Sharing Criteria</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_GID__c</fullName>
        <formula>Parent.NXP_GID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent GID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Old__c</fullName>
        <description>The originally formatted phone number before the data cleansing</description>
        <label>Phone Old</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ranking_Childs_Own__c</fullName>
        <formula>AND( (Ranking_Upload__c  &lt;&gt;  Ranking_of_Parent__c ) , AND( NOT(ISBLANK(Ranking_Upload__c)) ,  NOT(ISBLANK(Ranking_of_Parent__c)) ) )</formula>
        <label>Ranking, Child&apos;s Own</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ranking_Upload__c</fullName>
        <label>Ranking Upload</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <formula>IF( NOT(ISNULL( Ranking_Upload__c )) ,  Ranking_Upload__c , IF( NOT(ISNULL( Ranking_of_Parent__c )) , Ranking_of_Parent__c , NULL ) )</formula>
        <label>Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ranking_of_Parent__c</fullName>
        <formula>Parent.Ranking_Upload__c</formula>
        <label>Ranking of Parent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ready_for_D_B_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks Child Account records that went from Can&apos;t Upload to Null when the address changes.</description>
        <label>Ready for D&amp;B Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Rejection__c</fullName>
        <description>Please provide a reason for rejecting the D&amp;B data</description>
        <inlineHelpText>Please provide a reason for rejecting the D&amp;B data so that we can ensure we get the correct D&amp;B company.</inlineHelpText>
        <label>Reason for Rejection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account not valid</fullName>
                </value>
                <value>
                    <fullName>D&amp;B data is not up-to-date</fullName>
                </value>
                <value>
                    <fullName>Incorrect match on account</fullName>
                </value>
                <value>
                    <fullName>Incorrect match on location</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reco_Comm_Prob__c</fullName>
        <label>Reco. Commit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reco_Lost_Prob__c</fullName>
        <label>Reco. Lost Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Change the field label fm &quot;Region&quot; to &quot;Account Region&quot; to give more clear info. in reporting</description>
        <inlineHelpText>The geographical region the account belongs to. Determined by country.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <label>Request ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>Describe the role of account whom NXP sells to</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>IDH</fullName>
                </value>
                <value>
                    <fullName>VAR</fullName>
                </value>
                <value>
                    <fullName>ODM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <inlineHelpText>SIC code from DUNS (Standard Industrial Classification (SIC) codes are four-digit numerical codes assigned by the U.S. government to business establishment to identify the primary business of the establishment).</inlineHelpText>
        <label>SIC Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0000 - No found</fullName>
                </value>
                <value>
                    <fullName>0100 - Agricultural Production-Crops</fullName>
                </value>
                <value>
                    <fullName>0200 - Agricultural Prod-Livestock &amp; Animal Specialties</fullName>
                </value>
                <value>
                    <fullName>0700 - Agricultural Services</fullName>
                </value>
                <value>
                    <fullName>0800 - Forestry</fullName>
                </value>
                <value>
                    <fullName>0900 - Fishing, Hunting and Trapping</fullName>
                </value>
                <value>
                    <fullName>1000 - Metal Mining</fullName>
                </value>
                <value>
                    <fullName>1040 - Gold and Silver Ores</fullName>
                </value>
                <value>
                    <fullName>1090 - Miscellaneous Metal Ores</fullName>
                </value>
                <value>
                    <fullName>1220 - Bituminous Coal &amp; Lignite Mining</fullName>
                </value>
                <value>
                    <fullName>1221 - Bituminous Coal &amp; Lignite Surface Mining</fullName>
                </value>
                <value>
                    <fullName>1241 - Coal mining services</fullName>
                </value>
                <value>
                    <fullName>1311 - Crude Petroleum &amp; Natural Gas</fullName>
                </value>
                <value>
                    <fullName>1381 - Drilling Oil &amp; Gas Wells</fullName>
                </value>
                <value>
                    <fullName>1382 - Oil &amp; Gas Field Exploration Services</fullName>
                </value>
                <value>
                    <fullName>1389 - Oil &amp; Gas Field Services, NEC</fullName>
                </value>
                <value>
                    <fullName>1400 - Mining &amp; Quarrying of Nonmetallic Minerals (No Fuels)</fullName>
                </value>
                <value>
                    <fullName>1520 - General Bldg Contractors - Residential Bldgs</fullName>
                </value>
                <value>
                    <fullName>1531 - Operative Builders</fullName>
                </value>
                <value>
                    <fullName>1540 - General Bldg Contractors - Nonresidential Bldgs</fullName>
                </value>
                <value>
                    <fullName>1600 - Heavy Construction Other Than Bldg Const - Contractors</fullName>
                </value>
                <value>
                    <fullName>1611 - Highway and street construction</fullName>
                </value>
                <value>
                    <fullName>1622 - Bridge, tunnel, and elevated highway construction</fullName>
                </value>
                <value>
                    <fullName>1623 - Water, Sewer, Pipeline, Comm &amp; Power Line Construction</fullName>
                </value>
                <value>
                    <fullName>1629 - Heavy construction, nec</fullName>
                </value>
                <value>
                    <fullName>1700 - Construction - Special Trade Contractors</fullName>
                </value>
                <value>
                    <fullName>1711 - Plumbing, heating, air-conditioning</fullName>
                </value>
                <value>
                    <fullName>1721 - Painting and paper hanging</fullName>
                </value>
                <value>
                    <fullName>1731 - Electrical Work</fullName>
                </value>
                <value>
                    <fullName>1742 - Plastering, drywall, and insulation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <formula>SicDesc</formula>
        <label>SIC Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <description>Region Specific Sales Area</description>
        <inlineHelpText>Under each Region, Sales Areas are defined.</inlineHelpText>
        <label>Sales Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>AUT EMEA HQ</fullName>
                </value>
                <value>
                    <fullName>AUT EMEA TN</fullName>
                </value>
                <value>
                    <fullName>AUTO</fullName>
                </value>
                <value>
                    <fullName>AUTO CAR OEM</fullName>
                </value>
                <value>
                    <fullName>AUTO EMEA</fullName>
                </value>
                <value>
                    <fullName>AUTO EMEA MM</fullName>
                </value>
                <value>
                    <fullName>BAY</fullName>
                </value>
                <value>
                    <fullName>BOSCH</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>CENTRAL</fullName>
                </value>
                <value>
                    <fullName>CONTINENTAL</fullName>
                </value>
                <value>
                    <fullName>EAST</fullName>
                </value>
                <value>
                    <fullName>EMEA CIS</fullName>
                </value>
                <value>
                    <fullName>EMEA ID Remaining</fullName>
                </value>
                <value>
                    <fullName>EMEA North/Central</fullName>
                </value>
                <value>
                    <fullName>EMEA South/East</fullName>
                </value>
                <value>
                    <fullName>EMEA Strategic</fullName>
                </value>
                <value>
                    <fullName>GC Automotive</fullName>
                </value>
                <value>
                    <fullName>GC Foxconn</fullName>
                </value>
                <value>
                    <fullName>GC Identification</fullName>
                </value>
                <value>
                    <fullName>GC Mass Market China</fullName>
                </value>
                <value>
                    <fullName>GC Mass Market Taiwan</fullName>
                </value>
                <value>
                    <fullName>GC N. China</fullName>
                </value>
                <value>
                    <fullName>GC S. China</fullName>
                </value>
                <value>
                    <fullName>GC Taiwan</fullName>
                </value>
                <value>
                    <fullName>GC Wire. Infra.</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Japan Automotive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field signifies that Opportunities associated with this Parent Account should follow Segment Approval</description>
        <inlineHelpText>An indicator to trigger segment-level approval process. If it is set, the segment approval flow would be triggered, and any opportunity tied to the account (and its child accounts) will be escalated to the segment approver.</inlineHelpText>
        <label>Segment Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Manager_AMEC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Manager AMEC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Manager_Americas_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Manager_EMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Manager EMEA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Manager_EMEA_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Manager_GC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Manager GC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Manager_GC_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Manager_Japan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Manager Japan</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Manager_Japan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Manager_Korea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Manager Korea</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Manager_Korea_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Manager_SAP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Manager SAP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Manager_SAP_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(NOT USED) Service Manager Global</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Manager_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>(NOT USED) Short Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <inlineHelpText>Customer address - state/province</inlineHelpText>
        <label>State/ Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aceh</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Andaman And Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>An Giang</fullName>
                </value>
                <value>
                    <fullName>Anhui Province</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Assam</fullName>
                </value>
                <value>
                    <fullName>Bac Giang</fullName>
                </value>
                <value>
                    <fullName>Bac Kan</fullName>
                </value>
                <value>
                    <fullName>Bac Lieu</fullName>
                </value>
                <value>
                    <fullName>Bac Ninh</fullName>
                </value>
                <value>
                    <fullName>Baja California</fullName>
                </value>
                <value>
                    <fullName>Baja California S</fullName>
                </value>
                <value>
                    <fullName>Bali</fullName>
                </value>
                <value>
                    <fullName>Banten</fullName>
                </value>
                <value>
                    <fullName>Ba Ria Vung Tau</fullName>
                </value>
                <value>
                    <fullName>Beijing City</fullName>
                </value>
                <value>
                    <fullName>Bengkulu</fullName>
                </value>
                <value>
                    <fullName>Ben Tre</fullName>
                </value>
                <value>
                    <fullName>Bihar</fullName>
                </value>
                <value>
                    <fullName>Binh Dinh</fullName>
                </value>
                <value>
                    <fullName>Binh Duong</fullName>
                </value>
                <value>
                    <fullName>Binh Phuoc</fullName>
                </value>
                <value>
                    <fullName>Binh Thuan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the Pre-account approval</description>
        <label>Status (NOT IN USE)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_D_B_Cleansing__c</fullName>
        <label>DNB Verified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DNB Accepted</fullName>
                </value>
                <value>
                    <fullName>DNB Rejected: Poor Match</fullName>
                    <color>#FFCC33</color>
                    <label>DNB Rejected: Poor Match</label>
                </value>
                <value>
                    <fullName>DNB Rejected: Not Found</fullName>
                    <color>#FF0000</color>
                    <label>DNB Rejected: Not Found</label>
                </value>
                <value>
                    <fullName>DNB Rejected: Address Retained</fullName>
                </value>
                <value>
                    <fullName>D&amp;B Excluded: Technical Services</fullName>
                    <color>#641CCF</color>
                    <label>D&amp;B Excluded: Technical Services</label>
                </value>
                <value>
                    <fullName>D&amp;B Excluded: AOP</fullName>
                    <color>#33CCFF</color>
                    <label>D&amp;B Excluded: AOP</label>
                </value>
                <value>
                    <fullName>D&amp;B Excluded: Other Exceptions</fullName>
                    <color>#0B6FCE</color>
                    <label>D&amp;B Excluded: Other Exceptions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <inlineHelpText>Customer address. Maximum 35 characters.</inlineHelpText>
        <label>Street Line 2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street3__c</fullName>
        <inlineHelpText>Customer address. Maximum 35 characters.</inlineHelpText>
        <label>Street Line 3</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Length__c</fullName>
        <description>(Temporarily Field) For pre-migration data cleansing</description>
        <formula>LEN( Street__c )</formula>
        <label>Street Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street_Parent__c</fullName>
        <formula>Parent.Street__c</formula>
        <label>Street Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <inlineHelpText>Customer address. Maximum 35 characters.</inlineHelpText>
        <label>Street Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Segment_2013__c</fullName>
        <label>Sub-Segment 2013</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <label>(NOT IN USE) Sub-Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace and Defense</fullName>
                </value>
                <value>
                    <fullName>Authentication</fullName>
                </value>
                <value>
                    <fullName>Body, Safety and Comfort</fullName>
                </value>
                <value>
                    <fullName>Broadband Access</fullName>
                </value>
                <value>
                    <fullName>Broadcast</fullName>
                </value>
                <value>
                    <fullName>Building Automation</fullName>
                </value>
                <value>
                    <fullName>Car Infotainment</fullName>
                </value>
                <value>
                    <fullName>CATV</fullName>
                </value>
                <value>
                    <fullName>Chassis</fullName>
                </value>
                <value>
                    <fullName>Clinical Health</fullName>
                </value>
                <value>
                    <fullName>Consumer Health Device</fullName>
                </value>
                <value>
                    <fullName>Consumer Power Tool</fullName>
                </value>
                <value>
                    <fullName>Control system</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Gaming (Home Gaming Console)</fullName>
                </value>
                <value>
                    <fullName>Home Audio</fullName>
                </value>
                <value>
                    <fullName>Home Automation</fullName>
                </value>
                <value>
                    <fullName>Industrial Machinery</fullName>
                </value>
                <value>
                    <fullName>Intelligent transportation systems (ITS)</fullName>
                </value>
                <value>
                    <fullName>ISM</fullName>
                </value>
                <value>
                    <fullName>Lighting (including Solid state lighting, etc.)</fullName>
                </value>
                <value>
                    <fullName>Major Home Appliances</fullName>
                </value>
                <value>
                    <fullName>Medical Imaging</fullName>
                </value>
                <value>
                    <fullName>Medical Instrumentation</fullName>
                </value>
                <value>
                    <fullName>Military/Space/Avionics</fullName>
                </value>
                <value>
                    <fullName>Mobile Accessories</fullName>
                </value>
                <value>
                    <fullName>Mobile Handset</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>Netbook</fullName>
                </value>
                <value>
                    <fullName>Notebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZIP_Postal_Code__c</fullName>
        <inlineHelpText>Customer address - postal code</inlineHelpText>
        <label>ZIP / Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Account_Per_user_eMail</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Legal_Name__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>IsInactive__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>NXP_Global_ID__c</columns>
        <columns>Consolidated_Account_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Hoffman</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>David</value>
        </filters>
        <label>Account Per user eMail</label>
    </listViews>
    <listViews>
        <fullName>Accounts_byParent</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>012D0000000QkS1</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>Philips</value>
        </filters>
        <label>Accounts_byParent</label>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
            <group>AllInternalNXPUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>Region__c</columns>
        <columns>IsInactive__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>NXP_Global_ID__c</columns>
        <columns>Consolidated_Account_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>012D0000000QkS1</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
</CustomObject>